# InvisibleInc-ModManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  actions.py  config.py  config_parser.py  directory_controller.py  iimodman.py  io.github.qoala.IIModManager.yml  modinfo.py  modinfo_parser.py  modspec_converter.py
iimodman-cli/: CMakeLists.txt  addmodsimpl.cpp  addmodsimpl.h  cacheaddcommand.cpp  cacheaddcommand.h  cacheaddinstalledcommand.h  cachecommands.h  cacheupdatecommand.cpp  command.cpp  command.h  commandcategory.cpp  commandcategory.h  commandparser.cpp  configcommands.cpp  configcommands.h  confirmationprompt.cpp  modmancliapplication.cpp  modscommands.h  modsinstallcommand.cpp  modslistcommand.cpp  modsremovecommand.h  modssynccommand.cpp  steamapimoddownloadcommand.cpp  steamapimodinfocommand.cpp  updatemodsimpl.cpp  updatemodsimpl.h
iimodman-gui/: CMakeLists.txt  applypreviewcommand.cpp  applypreviewcommand.h  cacheaddcommand.cpp  cacheaddcommand.h  cacheimportinstalledcommand.cpp  cacheimportmodel.cpp  cacheimportmodel.h  cacheupdatecommand.cpp  cacheupdatecommand.h  comboboxdelegate.cpp  comboboxdelegate.h  guiconfig.cpp  guiconfig.h  main.cpp  mainwindow.cpp  mainwindow.h  markupdatescommand.cpp  markupdatescommand.h  modelutil.cpp  modelutil.h  modmanguiapplication.h  modsmodel.cpp  modsmodel.h  modspecpreviewmodel.cpp  modspecpreviewmodel.h  modssortfilterproxymodel.cpp  settingsdialog.cpp  settingsdialog.h  util.cpp  util.h
iimodman-gui/icons/: CMakeLists.txt
iimodman-gui/resources/: iimm.rc
iimodman-lib/: CMakeLists.txt  fileutils.cpp  fileutils.h  iimodman-lib_global.h  modcache.cpp  modcache.h  moddownloader.cpp  moddownloader.h  modinfo.cpp  modinfo.h  modlist.cpp  modlist.h  modmanconfig.cpp  modmanconfig.h  modsignature.cpp  modspec.cpp  modspec.h  modversion.cpp  modversion.h
iimodmanager/: CMakeLists.txt  iimodmanager.pro  io.github.qoala.IIModManager.desktop
iimodmanager/iimodman-cli/: CMakeLists.txt  addmodsimpl.cpp  addmodsimpl.h  cacheaddcommand.cpp  cacheaddcommand.h  cacheaddinstalledcommand.cpp  cacheaddinstalledcommand.h  cachecommands.cpp  cachecommands.h  cachelistcommand.cpp  cachelistcommand.h  cacheupdatecommand.cpp  cacheupdatecommand.h  command.cpp  command.h  commandcategory.cpp  commandcategory.h  commandparser.cpp  commandparser.h  configcommands.cpp  configcommands.h  configgetcommand.cpp  configgetcommand.h  configlistcommand.cpp  configlistcommand.h  configsetcommand.cpp  configsetcommand.h  confirmationprompt.h  iimodman-cli.pro  main.cpp  modmancliapplication.cpp  modmancliapplication.h  modscommands.cpp  modsinstallcommand.h  modslistcommand.cpp  modslistcommand.h  modsremovecommand.cpp  modssynccommand.cpp  modssynccommand.h  steamapicommands.cpp  (+7 more)
iimodmanager/iimodman-gui/: CMakeLists.txt  applypreviewcommand.cpp  cacheaddcommand.cpp  cacheaddcommand.h  cacheimportinstalledcommand.cpp  cacheimportinstalledcommand.h  cacheimportmodel.cpp  cacheimportmodel.h  cachesavecommand.cpp  cachesavecommand.h  cachestatuscommand.cpp  cachestatuscommand.h  cacheupdatecommand.cpp  cacheupdatecommand.h  guidownloader.cpp  guidownloader.h  icon.qrc  installedstatuscommand.cpp  installedstatuscommand.h  installedsyncfilecommand.cpp  installedsyncfilecommand.h  installedupdatecommand.cpp  installedupdatecommand.h  main.cpp  mainwindow.cpp  mainwindow.h  modcachemodel.cpp  modcachemodel.h  modelutil.cpp  modelutil.h  modmanguiapplication.cpp  modmanguiapplication.h  modsmodel.cpp  modsmodel.h  modsortfilterproxymodel.cpp  modsortfilterproxymodel.h  modspecpreviewmodel.cpp  modspecpreviewmodel.h  modssortfilterproxymodel.cpp  modssortfilterproxymodel.h  (+6 more)
iimodmanager/iimodman-lib/: CMakeLists.txt  fileutils.cpp  fileutils.h  iimodman-lib.pro  iimodman-lib_global.h  mod.cpp  mod.h  modcache.cpp  modcache.h  moddownloader.cpp  moddownloader.h  modinfo.cpp  modinfo.h  modlist.cpp  modlist.h  modmanconfig.cpp  modmanconfig.h  modsignature.cpp  modsignature.h  modspec.cpp  modspec.h
mod/: Makefile  makeconfig.example.mk  modinfo.txt
mod/scripts/: modinit.lua  screen_inserts.lua
mod/scripts/gui/: modal-mod-manager.lua
mod/scripts/states/: state-main-menu.lua
